Add registry password

--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,8 @@ steps:
     username: mykytaoksak
     password: f72mCVg2G8iZLsM
     repo: mykytaoksak/supabase_next_auth
-
+    rergistry_username: mykytaoksak
+    registry_password: 4e8b527e-ef9d-4426-9dd8-d50cb07251b2
 trigger:
   branch:
   - master
